Updated variable naming scheme